Neutralisierung für Datenschutz

--- a/index.html
+++ b/index.html
@@ -74,12 +74,12 @@
 					<li>
 						<span class="icon major style3 fa-venus"></span>
 						<h3>KIRA - die Mama</h3>
-						<p>Kira kommt aus der Zucht "Airedales von Allegra" in Reutlingen und ist seit August 2017 bei uns.</p>
+						<p>Kira kommt aus der Zucht "Airedales von Allegra" in Musterlingen und ist seit August 2017 bei uns.</p>
 					</li>
 					<li>
 						<span class="icon solid major style1 fa-mars"></span>
 						<h3>SHERLOCK - der Papa</h3>
-						<p>Sher Unit Sherlock Holmes ist ein russisch-polnischer Mix aus Schönheit und Sportlichkeit.</p>
+						<p>Muster Unit Sherlock Musters ist ein russisch-polnischer Mix aus Schönheit und Sportlichkeit.</p>
 					</li>
 				</ul>
 				<footer class="major">
@@ -226,31 +226,31 @@
 		<footer id="footer">
 			<section>
 				<h3>Anfahrt</h3>
-				<p>Wir wohnen in Gamerschwang, einem idyllischen Teilort der großen Kreisstadt Ehingen im Alb-Donau-Kreis (Baden-Württemberg),
-					eingebettet von der Bundesstrasse 311 im Norden und der Donau im Süden, ca. 25 km westlich von Ulm.
+				<p>Wir wohnen in Musterdorf, einem idyllischen Teilort der großen Kreisstadt Musterstadt im Eifel-Rems-Kreis (Baden-Musterberg),
+					eingebettet von der Bundesstrasse 333 im Norden und der Iller im Süden, ca. 12 km westlich von Obermusterstadt.
 				</p>
 				<iframe id="map"
-					src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d5309.851323309004!2d9.784169!3d48.285046!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x479bd634e326987f%3A0xa40a915da86e965f!2sHainbuchenstra%C3%9Fe%2026%2C%2089584%20Ehingen%20(Donau)!5e0!3m2!1sde!2sde!4v1595962453679!5m2!1sde!2sde"
+					src="https://www.google.com/maps/embed?pb=!1m28!1m12!1m3!1d42367.044160887344!2d9.857481309385618!3d48.419291210975416!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!4m13!3e6!4m5!1s0x4799652deffb5f41%3A0xe5fe073ef1bc82a9!2sBlaustein%2C%2089134!3m2!1d48.4192416!2d9.8986807!4m5!1s0x4799652deffb5f41%3A0xe5fe073ef1bc82a9!2s89134%20Blaustein!3m2!1d48.4192416!2d9.8986807!5e0!3m2!1sde!2sde!4v1731256450323!5m2!1sde!2sde"
 					width="200" height="150" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
 				<ul class="actions stacked">
-					<li><a href="https://www.google.com/maps/place/Hainbuchenstra%C3%9Fe+26,+89584+Ehingen+(Donau)/@48.285046,9.784169,15z/data=!4m5!3m4!1s0x479bd634e326987f:0xa40a915da86e965f!8m2!3d48.2850457!4d9.7841687?hl=de" target="_blank"
+					<li><a href="https://www.google.com/maps/place/Gottliebstra%C3%9Fe+2,+89134+Blaustein/@48.4159923,9.9207922,17z/data=!3m1!4b1!4m6!3m5!1s0x479965035c76c7db:0x36463cbb7c46f6a9!8m2!3d48.4159888!4d9.9233671!16s%2Fg%2F11c19hh6fl?hl=de&entry=ttu&g_ep=EgoyMDI0MTEwNi4wIKXMDSoASAFQAw%3D%3D" target="_blank"
 							class="button primary fit">zum routenplaner (neues fenster)</a></li>
 				</ul>
 			</section>
 			<section>
 				<h3>Impressum & Kontakt</h3>
-				<p>Annemarie Winter<br>
-					Hainbuchenstr. 26<br>
-					89584 Gamerschwang<br><br>
-					<b>Telefon: </b>+49 7394 54252<br>
-					<b>Mobil: </b>+49 1578 0859308<br>
-					<b>E-Mail: </b><a href="mailto:annemarie-winter@gmx.de" class="footertext"> annemarie-winter@gmx.de</a></p>
+				<p>Marianne Musterfrau<br>
+					Musterfraustr. 62<br>
+					00000 Musterstadt<br><br>
+					<b>Telefon: </b>+49 3333 55555<br>
+					<b>Mobil: </b>+49 172 1234567<br>
+					<b>E-Mail: </b><a href="mailto:marianne-musterfrau@freenet.de" class="footertext"> marianne-musterfrau@freenet.de</a></p>
 				<h3>Links & Partner</h3>
 				<ul class="statistics">
-					<li><a href="https://www.kft-online.de" class="icon"><img src="images/kft_logo.png" alt="KFT-Logo"></a></li>
-					<li><a href="https://www.vdh.de" class="icon"><img src="images/vdh_logo.png" alt="VDH-Logo"></a></li>
-					<li><a href="http://www.airedales-vom-buehlertal.de" class="icon"><img src="images/buehler_logo.png" alt="Bühlertal-Logo"></a></li>
-					<li><a href="https://www.airedales-von-allegra.de" class="icon"><img src="images/allegra_logo.png" alt="Allegra-Logo"></a></li>
+					<li><a href="https://www.platzhalter.de" class="icon"><img src="images/kft_logo.png" alt="KFT-Logo"></a></li>
+					<li><a href="https://www.platzhalter.de" class="icon"><img src="images/vdh_logo.png" alt="VDH-Logo"></a></li>
+					<li><a href="http://www.platzhalter.de" class="icon"><img src="images/buehler_logo.png" alt="Bühlertal-Logo"></a></li>
+					<li><a href="https://www.platzhalter.de" class="icon"><img src="images/allegra_logo.png" alt="Allegra-Logo"></a></li>
 					<li><a href="https://www.hundetraining-humplik.de" class="icon"><img src="images/hundetraining_humplik_logo.png" alt="Hundetraining Humplik Logo"></a></li>
 				</ul>
 				<h3>Rechtliches</h3>
